Plugins: Prevent linebreaks in pre tags.
Props Takahashi_Fumiki.
Fixes #3747.



git-svn-id: https://meta.svn.wordpress.org/sites/trunk@7632 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins/client/styles/base/_copy.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-plugins/client/styles/base/_copy.scss
@@ -43,6 +43,7 @@ pre {
 	max-width: 100%;
 	overflow: auto;
 	padding: 1.6em;
+	word-wrap: normal;
 }
 
 code, kbd, tt, var {
